[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/QuestLogUI.gd" id="1"]

[node name="QuestLogUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
offset_left = 10.0
offset_top = 8.0
offset_right = 390.0
offset_bottom = 24.0
text = "Quest Log - Active"
horizontal_alignment = 1

[node name="TabsContainer" type="HBoxContainer" parent="Panel"]
offset_left = 10.0
offset_top = 28.0
offset_right = 200.0
offset_bottom = 48.0

[node name="ActiveTab" type="Button" parent="Panel/TabsContainer"]
custom_minimum_size = Vector2(80, 0)
text = "Active"

[node name="CompletedTab" type="Button" parent="Panel/TabsContainer"]
custom_minimum_size = Vector2(80, 0)
text = "Completed"

[node name="QuestsContainer" type="VBoxContainer" parent="Panel"]
offset_left = 10.0
offset_top = 52.0
offset_right = 160.0
offset_bottom = 200.0
size_flags_vertical = 3

[node name="DetailsPanel" type="Panel" parent="Panel"]
offset_left = 170.0
offset_top = 52.0
offset_right = 390.0
offset_bottom = 200.0

[node name="QuestName" type="Label" parent="Panel/DetailsPanel"]
offset_left = 8.0
offset_top = 5.0
offset_right = 212.0
offset_bottom = 21.0
text = "Quest Name"

[node name="QuestDescription" type="Label" parent="Panel/DetailsPanel"]
offset_left = 8.0
offset_top = 25.0
offset_right = 212.0
offset_bottom = 75.0
autowrap_mode = 2

[node name="ObjectivesContainer" type="VBoxContainer" parent="Panel/DetailsPanel"]
offset_left = 8.0
offset_top = 80.0
offset_right = 212.0
offset_bottom = 140.0

[node name="CloseButton" type="Button" parent="Panel"]
offset_left = 330.0
offset_top = 8.0
offset_right = 390.0
offset_bottom = 28.0
text = "Close"
